classDiagram

    %% ============================================================
    %%                        ENUMERATIONS
    %% ============================================================

    class StatutIncident {
        <<enumeration>>
        OUVERT
        EN_COURS
        RESOLU
        FERME
        REJETE
    }

    class PrioriteIncident {
        <<enumeration>>
        FAIBLE
        MOYENNE
        HAUTE
        CRITIQUE
    }

    class ComplexiteIncident {
        <<enumeration>>
        SIMPLE
        MODEREE
        COMPLEXE
        TRES_COMPLEXE
    }

    class StatutAffectation {
        <<enumeration>>
        EN_ATTENTE
        ACCEPTEE
        EN_COURS
        TERMINEE
        REJETEE
    }

    class TypeNotification {
        <<enumeration>>
        INCIDENT_SOUMIS
        INCIDENT_AFFECTE
        INCIDENT_EN_COURS
        INCIDENT_RESOLU
        FEEDBACK_RECU
        PAIEMENT_VALIDE
    }

    class StatutPaiement {
        <<enumeration>>
        EN_ATTENTE
        CALCULE
        VALIDE
        PAYE
        ANNULE
    }

    class RoleUtilisateur {
        <<enumeration>>
        EMPLOYE
        TECHNICIEN
        DSI
    }

    class TypeMateriel {
        <<enumeration>>
        ORDINATEUR
        IMPRIMANTE
        SERVEUR
        EQUIPEMENT_RESEAU
        TELEPHONE
        PERIPHERIQUE
        AUTRE
    }

    %% ============================================================
    %%                        INTERFACES
    %% ============================================================

    class INotifiable {
        <<interface>>
        +recevoirNotification(notification : Notification) void
        +consulterNotifications() List~Notification~
        +getNombreNotificationsNonLues() int
    }

    class IAuthentifiable {
        <<interface>>
        +seConnecter(email : String, motDePasse : String) boolean
        +seDeconnecter() void
        +changerMotDePasse(ancien : String, nouveau : String) boolean
        +estActif() boolean
    }

    class IReportable {
        <<interface>>
        +soumettreIncident(incident : Incident) boolean
        +consulterMesIncidents() List~Incident~
        +annulerIncident(idIncident : Long) boolean
        +donnerFeedback(idIncident : Long, feedback : Feedback) boolean
    }

    class IStatistiques {
        <<interface>>
        +getStatistiques() Map~String_Object~
        +getTauxResolution() double
        +getTempsResolutionMoyen() double
    }

    %% ============================================================
    %%                     CLASSES METIER
    %% ============================================================

    class Utilisateur {
        <<abstract>>
        -id : Long
        -nom : String
        -prenom : String
        -email : String
        -motDePasseHash : String
        -telephone : String
        -actif : boolean
        -dateCreation : LocalDateTime
        -derniereConnexion : LocalDateTime
        -role : RoleUtilisateur
        -ville : Ville
        +getId() Long
        +getNom() String
        +getPrenom() String
        +getNomComplet() String
        +getEmail() String
        +getTelephone() String
        +getRole() RoleUtilisateur
        +getVille() Ville
        +isActif() boolean
        +setActif(actif : boolean) void
        +setDerniereConnexion(date : LocalDateTime) void
        +toString() String
    }

    class Employe {
        -matricule : String
        -departement : String
        -poste : String
        +getMatricule() String
        +getDepartement() String
        +getPoste() String
        +soumettreIncident(incident : Incident) boolean
        +consulterMesIncidents() List~Incident~
        +annulerIncident(idIncident : Long) boolean
        +donnerFeedback(idIncident : Long, feedback : Feedback) boolean
        +recevoirNotification(notification : Notification) void
        +consulterNotifications() List~Notification~
        +getNombreNotificationsNonLues() int
        +seConnecter(email : String, motDePasse : String) boolean
        +seDeconnecter() void
        +changerMotDePasse(ancien : String, nouveau : String) boolean
        +estActif() boolean
    }

    class Technicien {
        -specialites : String
        -disponible : boolean
        -niveauExpertise : int
        -certifications : String
        -tarifHoraire : double
        +getSpecialites() String
        +isDisponible() boolean
        +getNiveauExpertise() int
        +getCertifications() String
        +getTarifHoraire() double
        +setDisponible(disponible : boolean) void
        +accepterAffectation(idAffectation : Long) boolean
        +rejeterAffectation(idAffectation : Long, motif : String) boolean
        +terminerIntervention(idAffectation : Long, rapport : String) boolean
        +consulterMesAffectations() List~Affectation~
        +getMesStatistiques() StatistiqueTechnicien
        +recevoirNotification(notification : Notification) void
        +consulterNotifications() List~Notification~
        +getNombreNotificationsNonLues() int
        +seConnecter(email : String, motDePasse : String) boolean
        +seDeconnecter() void
        +changerMotDePasse(ancien : String, nouveau : String) boolean
        +estActif() boolean
        +getStatistiques() Map~String_Object~
        +getTauxResolution() double
        +getTempsResolutionMoyen() double
    }

    class DSI {
        -bureau : String
        -niveauAcces : int
        +affecterTechnicien(idIncident : Long, idTechnicien : Long) Affectation
        +affecterPlusieurs(idIncident : Long, idTechniciens : List~Long~) List~Affectation~
        +desaffecterTechnicien(idAffectation : Long) boolean
        +modifierPriorite(idIncident : Long, priorite : PrioriteIncident) boolean
        +modifierComplexite(idIncident : Long, complexite : ComplexiteIncident) boolean
        +cloturerIncident(idIncident : Long) boolean
        +rejeterIncident(idIncident : Long, motif : String) boolean
        +consulterTousIncidents(filtres : Map~String_Object~) List~Incident~
        +consulterIncidentParVille(idVille : Long) List~Incident~
        +consulterTechniciensDisponibles() List~Technicien~
        +calculerPaiement(idTechnicien : Long, periode : String) Paiement
        +validerPaiement(idPaiement : Long) boolean
        +genererRapport(dateDebut : LocalDate, dateFin : LocalDate) Rapport
        +recevoirNotification(notification : Notification) void
        +consulterNotifications() List~Notification~
        +getNombreNotificationsNonLues() int
        +seConnecter(email : String, motDePasse : String) boolean
        +seDeconnecter() void
        +changerMotDePasse(ancien : String, nouveau : String) boolean
        +estActif() boolean
        +getStatistiques() Map~String_Object~
        +getTauxResolution() double
        +getTempsResolutionMoyen() double
    }

    class Incident {
        -id : Long
        -titre : String
        -description : String
        -dateOuverture : LocalDateTime
        -dateMiseAJour : LocalDateTime
        -dateCloture : LocalDateTime
        -statut : StatutIncident
        -priorite : PrioriteIncident
        -complexite : ComplexiteIncident
        -cheminPieceJointe : String
        -employe : Employe
        -materiel : Materiel
        -categorieIncident : CategorieIncident
        -ville : Ville
        +getId() Long
        +getTitre() String
        +getDescription() String
        +getDateOuverture() LocalDateTime
        +getDateCloture() LocalDateTime
        +getStatut() StatutIncident
        +getPriorite() PrioriteIncident
        +getComplexite() ComplexiteIncident
        +getEmploye() Employe
        +getMateriel() Materiel
        +getCategorieIncident() CategorieIncident
        +getVille() Ville
        +setStatut(statut : StatutIncident) void
        +setPriorite(priorite : PrioriteIncident) void
        +setComplexite(complexite : ComplexiteIncident) void
        +setDateCloture(date : LocalDateTime) void
        +getDureeResolutionHeures() long
        +estEnRetard() boolean
        +toString() String
    }

    class Materiel {
        -id : Long
        -nom : String
        -numeroSerie : String
        -marque : String
        -modele : String
        -typeMateriel : TypeMateriel
        -dateAcquisition : LocalDate
        -ville : Ville
        -actif : boolean
        +getId() Long
        +getNom() String
        +getNumeroSerie() String
        +getMarque() String
        +getModele() String
        +getTypeMateriel() TypeMateriel
        +getDateAcquisition() LocalDate
        +getVille() Ville
        +isActif() boolean
        +setActif(actif : boolean) void
        +toString() String
    }

    class CategorieIncident {
        -id : Long
        -libelle : String
        -description : String
        -delaiResolutionHeures : int
        -coefficientComplexite : double
        -tarifBase : double
        +getId() Long
        +getLibelle() String
        +getDescription() String
        +getDelaiResolutionHeures() int
        +getCoefficientComplexite() double
        +getTarifBase() double
        +toString() String
    }

    class Affectation {
        -id : Long
        -incident : Incident
        -technicien : Technicien
        -dateAffectation : LocalDateTime
        -dateDebutIntervention : LocalDateTime
        -dateFinIntervention : LocalDateTime
        -statut : StatutAffectation
        -rapportIntervention : String
        -commentaireDSI : String
        -motifRejet : String
        +getId() Long
        +getIncident() Incident
        +getTechnicien() Technicien
        +getDateAffectation() LocalDateTime
        +getStatut() StatutAffectation
        +getRapportIntervention() String
        +getCommentaireDSI() String
        +setStatut(statut : StatutAffectation) void
        +setRapportIntervention(rapport : String) void
        +setDateDebutIntervention(date : LocalDateTime) void
        +setDateFinIntervention(date : LocalDateTime) void
        +getDureeInterventionHeures() long
        +toString() String
    }

    class Notification {
        -id : Long
        -titre : String
        -message : String
        -dateEnvoi : LocalDateTime
        -lu : boolean
        -typeNotification : TypeNotification
        -destinataire : Utilisateur
        -incident : Incident
        +getId() Long
        +getTitre() String
        +getMessage() String
        +getDateEnvoi() LocalDateTime
        +isLu() boolean
        +getTypeNotification() TypeNotification
        +getDestinataire() Utilisateur
        +getIncident() Incident
        +marquerCommeLu() void
        +toString() String
    }

    class Feedback {
        -id : Long
        -note : int
        -commentaire : String
        -dateCreation : LocalDateTime
        -satisfait : boolean
        -incident : Incident
        -employe : Employe
        +getId() Long
        +getNote() int
        +getCommentaire() String
        +isSatisfait() boolean
        +getIncident() Incident
        +getEmploye() Employe
        +getDateCreation() LocalDateTime
        +validerNote() boolean
        +toString() String
    }

    class Paiement {
        -id : Long
        -technicien : Technicien
        -montantTotal : double
        -dateCalcul : LocalDateTime
        -datePaiement : LocalDateTime
        -statut : StatutPaiement
        -periodeDebut : LocalDate
        -periodeFin : LocalDate
        -nombreInterventions : int
        -detailsCalcul : String
        -validePar : DSI
        +getId() Long
        +getTechnicien() Technicien
        +getMontantTotal() double
        +getStatut() StatutPaiement
        +getNombreInterventions() int
        +getDetailsCalcul() String
        +getPeriodeDebut() LocalDate
        +getPeriodeFin() LocalDate
        +getValidePar() DSI
        +calculerMontant(affectations : List~Affectation~) double
        +valider(dsi : DSI) boolean
        +setStatut(statut : StatutPaiement) void
        +setDatePaiement(date : LocalDateTime) void
        +toString() String
    }

    class Ville {
        -id : Long
        -nom : String
        -codePostal : String
        -region : String
        +getId() Long
        +getNom() String
        +getCodePostal() String
        +getRegion() String
        +toString() String
    }

    class Rapport {
        -id : Long
        -titre : String
        -dateGeneration : LocalDateTime
        -periodeDebut : LocalDate
        -periodeFin : LocalDate
        -totalIncidents : int
        -totalResolus : int
        -totalEnCours : int
        -contenuJson : String
        -generePar : DSI
        +getId() Long
        +getTitre() String
        +getDateGeneration() LocalDateTime
        +getTotalIncidents() int
        +getTotalResolus() int
        +getContenuJson() String
        +getGenerePar() DSI
        +getTauxResolutionGlobal() double
        +toString() String
    }

    class StatistiqueTechnicien {
        -id : Long
        -technicien : Technicien
        -totalInterventions : int
        -interventionsReussies : int
        -interventionsRejetees : int
        -noteMoyenne : double
        -tauxSatisfaction : double
        -tempsResolutionMoyen : double
        -periode : String
        +getId() Long
        +getTechnicien() Technicien
        +getTotalInterventions() int
        +getInterventionsReussies() int
        +getNoteMoyenne() double
        +getTauxSatisfaction() double
        +getTempsResolutionMoyen() double
        +calculerScore() double
        +toString() String
    }

    %% ============================================================
    %%                        RELATIONS
    %% ============================================================

    %% Héritage
    Utilisateur <|-- Employe
    Utilisateur <|-- Technicien
    Utilisateur <|-- DSI

    %% Implémentation interfaces
    Utilisateur ..|> INotifiable
    Utilisateur ..|> IAuthentifiable
    Employe ..|> IReportable
    Technicien ..|> IStatistiques
    DSI ..|> IStatistiques

    %% Associations
    Utilisateur "*" --> "1" Ville : estSituéDans

    Incident "1" --> "1" Employe : soumisParr
    Incident "1" --> "1" Materiel : concerneLe
    Incident "1" --> "1" CategorieIncident : estClassifiéPar
    Incident "1" --> "1" Ville : estLocaliséDans

    Affectation "*" --> "1" Incident : concerneL
    Affectation "*" --> "1" Technicien : estAssignéeA

    Notification "*" --> "1" Utilisateur : estDestinéeA
    Notification "*" --> "1" Incident : concerneL

    Feedback "0..1" --> "1" Incident : evalueL
    Feedback "*" --> "1" Employe : redigéPar

    Paiement "*" --> "1" Technicien : estVersePour
    Paiement "*" --> "1" DSI : valideParr

    Rapport "*" --> "1" DSI : genereParr

    StatistiqueTechnicien "1" --> "1" Technicien : concerneLe

    Materiel "*" --> "1" Ville : estLocaliséDans

    %% Dépendances Enums
    Incident ..> StatutIncident : utilise
    Incident ..> PrioriteIncident : utilise
    Incident ..> ComplexiteIncident : utilise
    Affectation ..> StatutAffectation : utilise
    Notification ..> TypeNotification : utilise
    Paiement ..> StatutPaiement : utilise
    Utilisateur ..> RoleUtilisateur : utilise
    Materiel ..> TypeMateriel : utilise